--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,12 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     font-size: 0.1px;
-    line-height:1.6;
+    line-height:1.1;
     color: #333;
 }
 /*container*/
 .container {
     width: 100%;
-    max-width: 1200px;
     margin: 0 auto;
     position: relative;
     overflow: auto;
@@ -28,7 +27,7 @@ body {
 }
 .background {
     background: url("../img/into.jpg") center no-repeat;
-    filter: blur(10px);
+    filter: blur(7px);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -93,11 +92,13 @@ transition: color .2s linear;
     z-index:1;
 }
 .intro_text{
-font-size: 20px;
+font-size: 35px;
 font-family:  'Montserrat', sans-serif;
 color: #fff;
 }
 .floating-button {
+    position: absolute;
+    bottom: 0%;
     background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);
     text-decoration: none;
     display: inline-block;
@@ -123,4 +124,37 @@ color: #fff;
     color: white;
     transform: translateY(-7px);
   }
-}
+  .section{
+    padding: 80px 0;
+  }
+  .section_header{
+      width: 100%;
+      margin: 0 auto 40;
+      text-align: center;
+      font-family:'Montserrat', sans-serif ;
+  }
+  .section_text{
+      font-size: 20px;
+      color:#333;
+      font-family:'Montserrat', sans-serif ;
+  }
+  .section_suptittle {
+font-size: 30px;
+color:#333;
+font-family:'Montserrat', sans-serif ;
+  }
+  .myphoto{ 
+    margin-left: 10px;
+    float: left;
+
+  }
+  .main_background{
+    background: url("../img/main.jpg") center no-repeat;
+    filter: blur(7px);
+    width: 100%;
+    background-size:cover;
+    height: 100vh;
+    position: absolute;
+    
+
+  }
