feat: add footer

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ transition: color .2s linear;
 .intro_text{
 font-size: 35px;
 font-family:  'Montserrat', sans-serif;
-color: #fff;
+color: #fff;;
 }
 .floating-button {
     position: absolute;
@@ -125,11 +125,10 @@ color: #fff;
     transform: translateY(-7px);
   }
   .section{
-    padding: 80px 0;
+    padding: 10px 0;
   }
   .section_header{
       width: 100%;
-      margin: 0 auto 40;
       text-align: center;
       font-family:'Montserrat', sans-serif ;
   }
@@ -140,12 +139,11 @@ color: #fff;
   }
   .section_suptittle {
 font-size: 30px;
-color:#333;
+color:#2EE59D;
 font-family:'Montserrat', sans-serif ;
   }
   .myphoto{ 
     margin-left: 10px;
-    float: left;
 
   }
   .main_background{
@@ -155,6 +153,51 @@ font-family:'Montserrat', sans-serif ;
     background-size:cover;
     height: 100vh;
     position: absolute;
-    
-
   }
+
+  .section_MySkills{
+    font-size: 30px;
+    font-family:'Montserrat', sans-serif ;
+  }
+  .section_description{
+    font-size: 30px;
+    color:#2EE59D;
+    font-family:'Montserrat', sans-serif ;
+  }
+.section_skill{
+    font-size: 30px;
+    color:#333
+    font-family:'Montserrat', sans-serif ;
+    position: center;
+    list-style-type:none
+}
+.section_work.{
+    width: 100%;
+    text-align: center;
+    font-family:'Montserrat', sans-serif ;
+
+}
+.examples_code{
+    position: center;
+}
+.footer{
+height: 70px;
+background-color: #333;
+filter: none;
+width: 100%;
+position: absolute;
+
+}
+.links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.create_data{
+
+    font-size: 22px;
+    text-align: center;
+color: black;
+
+}
