--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,14 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    background-size: cover;
     top:0;
     left:0;
 }
 
 .intro_tittle{
     color:#fff;
-    font-size:90px;
+    font-size:80px;
     font-weight:700;
     margin: 0%;
     font-family: 'Montserrat', sans-serif;
@@ -144,6 +145,7 @@ font-family:'Montserrat', sans-serif ;
   }
   .myphoto{ 
     margin-left: 10px;
+   
 
   }
   .main_background{
@@ -181,7 +183,7 @@ font-family:'Montserrat', sans-serif ;
     position: center;
 }
 .footer{
-height: 70px;
+height: 60px;
 background-color: #333;
 filter: none;
 width: 100%;
@@ -192,12 +194,6 @@ position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
-.create_data{
-
-    font-size: 22px;
-    text-align: center;
-color: black;
-
-}
