feat:link_button

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,14 @@ color: #fff;;
     color: white;
     transform: translateY(-7px);
   }
+  .link_button{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 5px;
+    color:#fff;
+    text-decoration: none;
+transition: color .2s linear;
+  }
+  /*main*/
   .section{
     padding: 10px 0;
   }
@@ -194,6 +202,7 @@ font-family:'Montserrat', sans-serif ;
 .examples_code{
     position: center;
 }
+/* footer */
 .footer{
 height: 60px;
 background-color: #333;
